fix(sidebar): raised z-index of sidebar to restore toggle sidebar button visibility

--- a/components/tailored/core/sidebar/Sidebar.less
+++ b/components/tailored/core/sidebar/Sidebar.less
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: @light-spacing;
+  z-index: @base-z-index;
 
   .padded {
     padding: @normal-spacing @normal-spacing 0 @normal-spacing;
